--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,12 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .[dev]
 
-    - name: Build documentation
-      run: mkdocs build
-
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/master'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./site
+    - name: Build documentation to docs/
+      run: |
+        pip install mkdocs mkdocs-material
+        mkdocs build --site-dir docs
