Complete Jekyll bypass and deployment fix
- Add aggressive Jekyll bypass with .nojekyll in all directories
- Clean conflicting files (docs/, dsa-docs/, _site/) before build
- Ensure static HTML deployment without any Jekyll processing
- Force workflow precedence over GitHub-managed Pages workflow
- Comprehensive MD to HTML conversion with proper file structure

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,10 +35,24 @@ jobs:
           npm install -g markdown-to-html-cli
           npm install -g @mermaid-js/mermaid-cli
 
+      - name: Force Jekyll bypass and clean setup
+        run: |
+          # Ensure Jekyll bypass
+          touch .nojekyll
+          echo "Jekyll bypass enabled"
+
+          # Clean any existing conflicting files
+          rm -rf docs/ dsa-docs/ _site/
+
       - name: Create documentation site
         run: |
           # Create main directory structure
           mkdir -p docs dsa-docs
+
+          # Ensure Jekyll bypass in all directories
+          touch docs/.nojekyll
+          touch dsa-docs/.nojekyll
+          touch .nojekyll
 
           # Convert main README to HTML
           markdown README.md > docs/index.html
