feat: Add educational enhancements - progressive disclosure, visual learning, and industry context
- Add brute force vs optimized algorithm comparisons (two_sum)
- Implement Kadane's algorithm visualization with matplotlib
- Add performance benchmarking framework for algorithm comparison
- Standardize README formats with industry applications
- Add code comments explaining complex algorithm logic
- Connect learning concepts to real-world industry usage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,10 @@ dev = [
     "jupyter",
     "ipykernel",
 ]
+visualization = [
+    "matplotlib>=3.5.0",
+    "numpy>=1.21.0",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["dsa/tests", "basic_programs"]
